# rust_game

./: Cargo.toml  LICENSE  README.md
shaders/: frag.glsl  vert.glsl
src/: camera.rs  frag.glsl  gltf.rs  main.rs  material.rs  model.rs  vert.glsl
